[package]
name = "tiny-web"
version = "0.1.0"
authors = ["chuantang <chuantang.gu@17zuoye.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
ascii = "1.0.0"
log = "0.4.8"
chunked_transfer = "1.0.0"
url = "2.1.0"
env_logger = "0.7.1"
